Text - Change text for osloh

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Mirrored from www.blackbox.cool/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 24 Nov 2015 19:39:15 GMT -->
 <head>
     <meta charset="utf-8">
-    <title>Blackbox</title>
+    <title>o'sloh</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name='description' content='A boring new business company from the creators of Cards Against Humanity.'>
@@ -37,8 +37,8 @@
           <div class="row">
             <div class="col-md-8">
               <hr>
-              <h1>blackbox</h1>
-              <h2>a boring new business company from the creators of Cards Against Humanity.</h2>
+              <h1>O'sloh</h1>
+              <h2>Communautee de consultant en informatique, avec des professionnels.</h2>
             </div>
             <div class="col-md-4">
             <!-- Negative Space above "let's talk"-->
@@ -50,13 +50,19 @@
         <div class="container">
           <div class="row">
               <div class="col-md-4">
-                <p>Selling stuff online is tedious and horrible, but at some point we got really good at it. Blackbox lets you sell and ship your stuff for a fraction of the cost and effort of doing it yourself. The shipping is fast. We pay your sales tax. You can customize the packaging and the inserts. It’s pretty great.</p>
+                <p>
+                  Je consulte avant de me lancer dans un projet informatique. Je demande de l'aide pendant le développement de mes projets. O'sloh me contact pour me donner le meilleur des suivis. Collabore gratuitement avec moi. C'est genial.
+                </p>
               </div>
               <div class="col-md-4">
-                <p>We think the future is going to favor independent creators selling their own products directly to fans, without publishers or other bloodsucking middlemen taking most of the money. In fact, we’re betting the company on it.</p>
+                <p>
+                  O'sloh est une communauté d'entre aide. Chaque membre apporte sa part de connaissance. Elle apporte des réponses les plus précises, objectives puis subjectives, sur des domaines très variés.
+                </p>
               </div>
               <div class="col-md-4 mailing-list">
-                <p>If you’re making something great, we’d love to make this thing work for you. Blackbox launches next year. If you want updates, sign up here.</p>
+                <p>
+                  J'ai une idée que je n'ose pas lancer. Je me demande comment et avec quelle techno réaliser mon projet. Je suis complètement bloqué et perdu dans son développement. <b>Je contacte O'sloh !</b>
+                </p>
 
                 <!-- Begin MailChimp Signup Form -->
                 <form action="http://cardsagainsthumanity.us2.list-manage.com/subscribe/post?u=94883f64531ee7b17a73b823f&amp;id=c1a6cc667e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
