--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script>window.location.replace("https://osloh.xyz");</script>
+<script>window.location.replace("https://github.com/osloh/");</script>
